fix: navbar alignment

--- a/packages/ui/src/ResponsiveMenu/responsive-menu.css
+++ b/packages/ui/src/ResponsiveMenu/responsive-menu.css
@@ -16,7 +16,6 @@ nav.menu > ul > li > a {
   padding: 1rem 0.5rem;
   color: inherit;
   text-decoration: none;
-  text-align: center;
   flex: 1;
 }
 
